adicionado alguns ajustes como responsividade para mobile e icones github e linkedin

--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
     <!-- HOME SECTION -->
 
     <div id="home">
-        <div  className="home-container">
-            <h1> <span>I'm Adriano Batista,</span> Front-end developer <br /> based in Brazil.</h1>
-            <p class="p-home">I design and code things, and I love bringing them to life.</p>
-    
-            <div class="button-group">
+      <div class="home-container">
+          <h1><span>I'm Adriano Batista,</span> Front-end developer <br /> based in Brazil.</h1>
+          <p class="p-home">I design and code things, and I love bringing them to life.</p>
+  
+          <div class="button-group">
               <button class='button-container' onclick="scrollToContact()">Contact me</button>
-                <button className='button-container'>Curriculum</button>
-            </div>
-    
-            <div className="social-icons">
-                <a href="https://github.com/eu-adris" target="_blank" rel="noopener noreferrer">
-                    <FaGithub size={50} />
-                </a>
-                <a href="https://www.linkedin.com/in/eu-adris/" target="_blank" rel="noopener noreferrer">
-                    <FaLinkedin size={50} />
-                </a>
-            </div>
-        </div>
-    </div>
+              <button class='button-container'>Curriculum</button>
+          </div>
+  
+          <div class="social-icons">
+              <a href="https://github.com/eu-adris" target="_blank" rel="noopener noreferrer">
+                  <i class="fab fa-github fa-2x"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/eu-adris/" target="_blank" rel="noopener noreferrer">
+                  <i class="fab fa-linkedin fa-2x"></i>
+              </a>
+          </div>
+      </div>
+  </div>
 
 
 
