adicionado o projeto rio tour

--- a/index.html
+++ b/index.html
@@ -119,8 +119,14 @@
                 <p>A CRUD for a nutrition form that calculates your BMI using HTML, CSS, and JavaScript, along with an API for patients.</p>
                 <a href="https://formulario-nutricao-vert.vercel.app/" target="_blank" rel="noopener noreferrer">View Project</a>
             </li>
-        </ul>
-    </div>
+
+            <!-- Projeto 6 -->
+            <li class="project-item">
+              <img src="./imagens/foto rio tour.png" alt="Nutrition form">
+              <h3>Rio Tour</h3>
+              <p>A website project for tourists to explore the wonders of Rio de Janeiro. Here, I learned a lot about CSS3's position property. I must admit it was challenging, though flexbox and grid were very helpful.</p>
+              <a href="https://projetoriotour.vercel.app/" target="_blank" rel="noopener noreferrer">View Project</a>
+          </li>
 
 
 
